manage the seagger file and routing
